fix simultaneous visibility of message and error. fix error overflow.

--- a/packages/sit-onyx/src/styles/mixins/input.scss
+++ b/packages/sit-onyx/src/styles/mixins/input.scss
@@ -65,12 +65,14 @@
     }
   }
 
-  .onyx-form-element__error-message {
+  .onyx-form-element {
     --error-message-display: none;
   }
   &:has(#{$base-selector}__native:user-invalid) {
-    .onyx-form-element__error-message {
-      --error-message-display: flex;
+    .onyx-form-element {
+      --error-message-display: block;
+      // hide the default message once an error is shown
+      --message-display: none;
     }
   }
 
